--- a/app/globals.css
+++ b/app/globals.css
@@ -33,6 +33,10 @@
     --ring: 222.2 84% 4.9%;
  
     --radius: 0.5rem;
+    --bg: #151c2c;
+    --bgSoft: #182237;
+    --text: white;
+    --textSoft: #b7bac1;
   }
  
   .dark {
