--- a/components/Products/products.module.css
+++ b/components/Products/products.module.css
@@ -1,5 +1,5 @@
 .container{
-  background-color: var(--bgSoft);
+  /* background-color: var(--bgSoft); */
   padding: 20px;
   border-radius: 10px;
   margin-top: 20px;
